--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <form>
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required><br>
-                <label for="email">Email:</label>
+                <label for="email">Contact No.:</label>
                 <input type="email" id="email" name="email" required><br>
-                <label for="message">Message:</label>
+                <label for="message">Address:</label>
                 <textarea id="message" name="message" required></textarea><br>
                 <button type="submit">Submit</button>
             </form>
